--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: #fcde9c;
     padding: 20px;
-    color: #333;
+    color: #381d2a;
 }
 
 #searchForm {
@@ -12,14 +12,14 @@ body {
 #searchInput {
     padding: 10px;
     font-size: 16px;
-    border: 1px solid #ddd;
+    border: 1px solid #c4d6b0;
     border-radius: 4px;
     margin-right: 10px;
 }
 
 #searchForm button {
     padding: 10px 15px;
-    background-color: #007bff;
+    background-color: #381d2a;
     color: white;
     border: none;
     border-radius: 4px;
@@ -27,11 +27,11 @@ body {
 }
 
 #searchForm button:hover {
-    background-color: #0056b3;
+    background-color: #ba5624;
 }
 
 #results {
-    border-top: 2px solid #007bff;
+    border-top: 2px solid #381d2a;
     margin-top: 20px;
     padding-top: 20px;
 }
@@ -41,7 +41,7 @@ body {
     align-items: center;
     padding: 10px;
     background-color: white;
-    border: 1px solid #ddd;
+    border: 1px solid #c4d6b0;
     margin-bottom: 10px;
     cursor: pointer;
 }
@@ -60,7 +60,7 @@ body {
 }
 
 .profile-link {
-    color: #007bff;
+    color: #381d2a;
     text-decoration: none;
 }
 
@@ -74,7 +74,7 @@ li {
 }
 
 li a {
-    color: #007bff;
+    color: #381d2a;
     text-decoration: none;
 }
 
